--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "eslint-config-next": "13.0.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
-    "prisma": "4.5.0",
+    "prisma": "4.5.0"
   }
 }
