--- a/package.json
+++ b/package.json
@@ -4,28 +4,38 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev_server": "nodemon backend/fastify.js",
+    "prisma_generate": "prisma generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tanstack/react-table": "^8.5.21",
-    "next": "13.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@prisma/client": "4.5.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.14.1",
+    "@tanstack/react-table": "^8.5.21",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.9.2",
+    "mongodb": "^4.11.0",
+    "next": "13.0.1",
+    "nodemon": "^2.0.20",
+    "path-to-regexp": "^6.2.1",
     "query-string": "^7.1.1",
-    "path-to-regexp": "^6.2.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.14.5",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "prisma": "4.5.0"
+    "prisma": "4.5.0",
+    "tailwindcss": "^3.2.1"
   }
 }
