--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.14.1",
     "@tanstack/react-table": "^8.5.21",
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
     "mongodb": "^4.11.0",
