--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL=mongodb-connection-string
-PORT=0000
-JWT_SECRET=jwt-secret
+PORT=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+ACCESS_TOKEN_SECRET=
