--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
+    "jose": "^4.11.0",
     "mongodb": "^4.11.0",
     "next": "13.0.1",
     "nodemon": "^2.0.20",
