FIX: navigates to login page is user is not authorised

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ NEXT_PUBLIC_GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 ACCESS_TOKEN_SECRET=
 NEXT_PUBLIC_BACKEND_BASE_URL=
-NEXT_PUBLIC_REDIRECT_URI=
+NEXT_PUBLIC_LOGIN_URL=
